# agent-portal

./: .gitignore  AGENT_STEERING.md  ARCHITECTURE.md  CHANGELOG.md  CLI.md  CONTRIBUTING.md  INSTALLATION.md  LICENSE  PLUGIN_SYSTEM.md  PYTHON_SDK.md  QUICKSTART.md  README.md  RELEASE_NOTES_v0.1.0.md  RUNTIME.md  SAFETY_MODEL.md  SKILL.md  TESTING.md  TROUBLESHOOTING.md  UPGRADE_GUIDE.md  VS_CODE_EXTENSION.md  agent-portal.config.json  package-lock.json  package.json  tsconfig.base.json
.continue/agents/: new-config.yaml
apps/desktop/: package.json
apps/desktop/src/: main.ts
apps/vscode-extension/: .vscodeignore  README.md  package.json  tsconfig.json
apps/vscode-extension/src/: extension.ts
connectors/chatgpt-tools/: README.md
connectors/claude-mcp-server/: README.md
connectors/gemini-connector/: README.md
connectors/rest-websocket-api/: README.md
docs/: MCP_SERVER.md  architecture.md  roadmap.md
plugins/: README.md  plugin.schema.json
plugins/agent-portal-browser/: plugin.json
plugins/agent-portal-python/: plugin.json
plugins/agent-portal-skills/: plugin.json
plugins/agent-portal-vscode/: plugin.json
plugins/example-runtime-plugin/: README.md  plugin.json
python/: README.md  pyproject.toml
python/agent_portal/: __init__.py  browser.py  cli.py  config.py  doctor.py  exceptions.py  logging_utils.py  metrics.py  models.py  plugin_system.py  rate_limit.py  runtime.py  server.py  validation.py
python/tests/: test_config.py  test_doctor.py  test_metrics.py  test_rate_limit.py  test_runtime.py  test_server.py  test_validation.py
releases/desktop/agent-portal-desktop/: README.md  RELEASE_NOTES.md  launch-agent-portal.bat
releases/python/: agent_portal-0.0.2-py3-none-any.whl  agent_portal-0.0.3-py3-none-any.whl  agent_portal-0.1.0-py3-none-any.whl
scripts/: package_desktop.mjs  release_python.py
tests/: plugin-manifest.test.mjs  runtime.test.mjs  vscode-extension.test.mjs
(+1 files in other folders)
