[project]
name = "agent-portal"
version = "0.1.0"
description = "Python runtime package for Agent Portal."
requires-python = ">=3.10"
dependencies = [
  "playwright>=1.54.0"
]

[project.scripts]
agent-portal-runtime = "agent_portal.server:main"
agent-portal = "agent_portal.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
